# DocMeld

./: .env.local.template  .gitignore  CLAUDE.md  README.md
.specify/memory/: constitution.md
docmeld/: .env.local.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docmeld/.github/workflows/: lint.yml  publish.yml  test.yml
docmeld/docmeld/: __init__.py  cli.py  parser.py  summarize.py
docmeld/docmeld/bronze/: __init__.py  element_extractor.py  element_types.py  filename_sanitizer.py  processor.py
docmeld/docmeld/bronze/backends/: __init__.py  docling_backend.py  pymupdf_backend.py
docmeld/docmeld/categorize/: __init__.py  aggregator.py  categorizer.py  index_writer.py  models.py  reorganizer.py
docmeld/docmeld/gold/: __init__.py  deepseek_client.py  metadata_extractor.py  processor.py
docmeld/docmeld/prd/: __init__.py  generator.py  models.py
docmeld/docmeld/silver/: __init__.py  markdown_renderer.py  page_aggregator.py  page_models.py  processor.py  title_tracker.py
docmeld/docmeld/skills/: __init__.py  generator.py  models.py
docmeld/docmeld/utils/: __init__.py  env_loader.py  logging.py  progress.py
docmeld/docmeld/workflow/: __init__.py  generator.py  models.py
docmeld/tests/: conftest.py
docmeld/tests/contract/: test_categories_schema.py  test_element_schema.py
docmeld/tests/fixtures/: generate_fixtures.py
docmeld/tests/integration/: test_bronze_batch.py  test_bronze_pipeline.py  test_cli.py  test_end_to_end.py  test_gold_pipeline.py  test_silver_pipeline.py
docmeld/tests/unit/: test_aggregator.py  test_categorizer.py  test_deepseek_client.py  test_docling_backend.py  test_element_extractor.py  test_element_types.py  test_env_loader.py  test_filename_sanitizer.py  test_index_writer.py  test_logging.py  test_markdown_renderer.py  test_prd_generator.py  test_progress.py  test_pymupdf_backend.py  test_reorganizer.py  test_skills_generator.py  test_title_tracker.py  test_workflow_generator.py
references/00-core/: PRD.md  bronze_example.json  gold_example.jsonl  harness_coding.md  pdf-engines.md  reference_code.py  reference_code2.py  silver_example.jsonl  use-cases.md
references/01-market/: market-analysis.md
specs/001-mvp-pdf-pipeline/: data-model.md  evaluation.md  optimization-plan.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mvp-pdf-pipeline/checklists/: requirements.md
specs/001-mvp-pdf-pipeline/contracts/: element-schema.json
specs/002-paper-batch-categorize/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-paper-batch-categorize/checklists/: requirements.md
specs/003-paper-to-prd/: plan.md  spec.md
specs/004-paper-to-workflow/: spec.md
specs/005-books-to-skills/: spec.md
(+1 files in other folders)
